Fixed title, navbar, info section spacings, color, and hover links and more

--- a/style.css
+++ b/style.css
@@ -2,9 +2,18 @@ h1, h2, h3, h4, h5 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .bunchofbananas {
     width: auto;
-    height: 110px;
+    height: 50px;
     border-radius: 10px;
     margin-right: 10px;
 }
@@ -19,6 +28,7 @@ h1, h2, h3, h4, h5 {
 }
 .navbar {
     display: flex;
+    justify-content: space-around;
     background-color: #1f2937;
 }
 
@@ -27,13 +37,22 @@ h1, h2, h3, h4, h5 {
 }
 
 .navbarlinks {
-    float: right;
-    display:flex
+   display:flex;
 }
 
 .info {
-    display:flex
-    
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    padding-left: 500px;
+    padding-right: 500px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.infoText {
+    display: flex;
 }
 
 button {
